# Alkaline-NVT

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  alkaline-client.py  alkaline-server.py  logo.txt  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
modules/: client.py  client_commands.py  comms.py  logo.py  server.py  server_commands.py
src/: alkaline-client.py  alkaline-server.py
src/modules/: client.py  comms.py  server.py
unit_tests/: README.md
