[metadata]
name = modules
version = 0.1.0
description = Encrypted Network Virtual Terminal Tool
author = Sean Brady
license = MIT
license_file = LICENSE.md
platforms = unix, linux, osx
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

[options]
packages =
	modules
install_requires =
	certifi==2023.7.22
	cffi==1.15.1
	cryptography==41.0.4
	pycparser==2.21
	pylsqpack==0.3.17
	PyNaCl==1.5.0
	pyOpenSSL==23.2.0
python_requires = >=3.7
package_dir =
	=src
zip_safe = no

[options.extras_require]
testing =
	flake8>=6.1.0
	mypy>=1.6.1
	pytest>=7.4.2
	pytest-cov>=4.1.0
	tox>=4.11.3

[options.package_data]
modules = py.typed

[flake8]
max-line-length = 100
